// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesDropdown renders correctly with a list of threads 1`] = `
<TopNavDropdown
  body={
    <div
      className="threads body"
    >
      <MessagesDropdownItem
        currentUser={
          Object {
            "avatarUrl": "foo.png",
            "id": "1",
            "name": "Charles Darwin",
          }
        }
        onClick={[Function]}
        thread={
          SessionBoundModel {
            "_fields": Object {
              "id": 2,
              "updatedAt": "2017-05-07T03:24:00",
            },
          }
        }
      />
      <MessagesDropdownItem
        currentUser={
          Object {
            "avatarUrl": "foo.png",
            "id": "1",
            "name": "Charles Darwin",
          }
        }
        onClick={[Function]}
        thread={
          SessionBoundModel {
            "_fields": Object {
              "id": 1,
              "updatedAt": "1995-12-17T03:23:00",
            },
          }
        }
      />
    </div>
  }
  header={
    <div
      className="header-content header-content"
    >
      <Link
        className="open header-link bdy-lt-sm"
        replace={false}
        to="/t/2"
      >
        Open Messages
      </Link>
      <Link
        className="new header-link bdy-lt-sm"
        replace={false}
        to="/t/new"
      >
        New
      </Link>
    </div>
  }
  onToggle={[Function]}
  toggleChildren={
    <span>
      click me
    </span>
  }
/>
`;

exports[`MessagesDropdown renders correctly with an empty list 1`] = `
<TopNavDropdown
  body={
    <NoItems
      message="You don't have any conversations yet"
    />
  }
  header={
    <div
      className="header-content header-content"
    >
      <Link
        className="open header-link bdy-lt-sm"
        replace={false}
        to="/t/new"
      >
        Open Messages
      </Link>
      <Link
        className="new header-link bdy-lt-sm"
        replace={false}
        to="/t/new"
      >
        New
      </Link>
    </div>
  }
  onToggle={[Function]}
  toggleChildren={
    <span>
      click me
    </span>
  }
/>
`;

exports[`MessagesDropdownItem renders correctly with an empty thread 1`] = `""`;

exports[`MessagesDropdownItem renders correctly with no other participants 1`] = `""`;
